--- a/day-7/ADF/templates/index.html
+++ b/day-7/ADF/templates/index.html
@@ -1,2 +1,10 @@
 <h3>Day-5 Work</h3>
 <hr>
+<form action="{% url 'RequestForm' %}" method="post">
+    {% csrf_token %}
+    {{ form }}
+    {% for e in forms.non_field_errors %}
+    <p>{{ e }}</p>
+    {% endfor %}
+    <input type="submit" value="Submit">
+</form>
